[gd_scene load_steps=15 format=3 uid="uid://c1b4fs5wgt6xb"]

[ext_resource type="Script" uid="uid://crqi4ho0ds3m5" path="res://scripts/ui/GUI.gd" id="1_6gfri"]
[ext_resource type="PackedScene" uid="uid://b0uryt1jeomv" path="res://scenes/ui/gui/joystick.tscn" id="2_7hruu"]
[ext_resource type="PackedScene" uid="uid://cc14pyurieaij" path="res://scenes/ui/gui/status_bar.tscn" id="2_hpdhh"]
[ext_resource type="PackedScene" uid="uid://v4apnft7xm7h" path="res://scenes/ui/gui/left_joystick.tscn" id="3_3vknn"]
[ext_resource type="Texture2D" uid="uid://2a3alic1o1rk" path="res://assets/images/Bsqr0/Bsqr0.png" id="4_40ujj"]
[ext_resource type="Texture2D" uid="uid://c6qrhvtk8byji" path="res://assets/images/Bsqr0/Bsqr1.png" id="5_bu0gq"]
[ext_resource type="Texture2D" uid="uid://cx65pkmpyak47" path="res://assets/images/Bsqr0/Bsqr2.png" id="6_b6ld1"]
[ext_resource type="Texture2D" uid="uid://ccr7jjxi71lmo" path="res://assets/images/Bcir0/Bcir0.png" id="7_s1m33"]
[ext_resource type="Texture2D" uid="uid://cpqq2nk7hdsno" path="res://assets/images/Bcir0/Bcir1.png" id="8_64n68"]
[ext_resource type="Texture2D" uid="uid://caufnyg1e5osw" path="res://assets/images/Bcir0/Bcir2.png" id="9_64n68"]
[ext_resource type="PackedScene" uid="uid://e01i1nskhrad" path="res://scenes/ui/gui/game_toolbar.tscn" id="12_jn5u4"]
[ext_resource type="PackedScene" uid="uid://hg64k8008coq" path="res://scenes/ui/components/TouchScreenButton.tscn" id="13_gw7b5"]

[sub_resource type="LabelSettings" id="LabelSettings_c101d"]
outline_size = 2

[sub_resource type="LabelSettings" id="LabelSettings_jqi1v"]
font_size = 29
outline_size = 16
outline_color = Color(0.298039, 0.298039, 0.298039, 1)

[node name="GUI" type="Control"]
custom_minimum_size = Vector2(2340, 1080)
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_6gfri")

[node name="Top" type="MarginContainer" parent="."]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="Status Bar" parent="." instance=ExtResource("2_hpdhh")]
layout_mode = 0
theme_override_constants/margin_left = 90
theme_override_constants/margin_top = 55

[node name="MarginContainer5" type="MarginContainer" parent="."]
modulate = Color(1, 1, 1, 0.392157)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -50.0
offset_right = 50.0
offset_bottom = 150.0
grow_horizontal = 2
theme_override_constants/margin_top = 50

[node name="Exit" type="TextureButton" parent="MarginContainer5"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture_normal = ExtResource("4_40ujj")
texture_pressed = ExtResource("5_bu0gq")
texture_hover = ExtResource("6_b6ld1")
stretch_mode = 0

[node name="Label" type="Label" parent="MarginContainer5/Exit"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
text = "ooo"
label_settings = SubResource("LabelSettings_c101d")
horizontal_alignment = 1
vertical_alignment = 1

[node name="Game Toolbar" parent="." instance=ExtResource("12_jn5u4")]
layout_mode = 1
pivot_offset = Vector2(595, 0)
theme_override_constants/margin_top = -10

[node name="MarginContainer4" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 6
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -175.0
offset_top = -50.0
offset_bottom = 50.0
grow_horizontal = 0
grow_vertical = 2
theme_override_constants/margin_right = 175
theme_override_constants/margin_bottom = 490

[node name="Dev Mode" type="TextureButton" parent="MarginContainer4"]
custom_minimum_size = Vector2(100, 100)
layout_mode = 2
texture_normal = ExtResource("7_s1m33")
texture_pressed = ExtResource("8_64n68")
texture_hover = ExtResource("9_64n68")
stretch_mode = 0

[node name="Label" type="Label" parent="MarginContainer4/Dev Mode"]
layout_mode = 2
offset_top = 32.0
offset_right = 100.0
offset_bottom = 67.0
grow_horizontal = 2
grow_vertical = 2
text = "DEV
MODE"
horizontal_alignment = 1
vertical_alignment = 1

[node name="movement" type="MarginContainer" parent="."]
modulate = Color(1, 1, 1, 0.705882)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -450.0
offset_top = -400.0
grow_horizontal = 0
grow_vertical = 0
theme_override_constants/margin_right = 150
theme_override_constants/margin_bottom = 100

[node name="JoystickContainer" type="Panel" parent="movement"]
modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(300, 300)
layout_mode = 2

[node name="Joystick" parent="movement" instance=ExtResource("2_7hruu")]
position = Vector2(150, 151)
scale = Vector2(2, 2)

[node name="Left Joysticks" type="MarginContainer" parent="."]
modulate = Color(1, 1, 1, 0.705882)
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_top = -350.0
offset_right = 565.0
grow_vertical = 0
theme_override_constants/margin_left = 115
theme_override_constants/margin_bottom = 150

[node name="HBoxContainer" type="HBoxContainer" parent="Left Joysticks"]
layout_mode = 2
theme_override_constants/separation = 50

[node name="Left Joystick" type="Panel" parent="Left Joysticks/HBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="Joystick" parent="Left Joysticks/HBoxContainer/Left Joystick" instance=ExtResource("3_3vknn")]
position = Vector2(100, 101)
scale = Vector2(2, 2)

[node name="Left Joystick2" type="Panel" parent="Left Joysticks/HBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
custom_minimum_size = Vector2(200, 200)
layout_mode = 2

[node name="Joystick" parent="Left Joysticks/HBoxContainer/Left Joystick2" instance=ExtResource("3_3vknn")]
position = Vector2(100, 101)
scale = Vector2(2, 2)

[node name="Left Buttons" type="MarginContainer" parent="."]
modulate = Color(1, 1, 1, 0.705882)
layout_mode = 1
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -20.0
offset_right = 40.0
offset_bottom = 20.0
grow_vertical = 2
theme_override_constants/margin_left = 150

[node name="HBoxContainer" type="HBoxContainer" parent="Left Buttons"]
layout_mode = 2
theme_override_constants/separation = 25

[node name="SprintButton" parent="Left Buttons/HBoxContainer" instance=ExtResource("13_gw7b5")]
layout_mode = 2

[node name="SprintLabel" type="Label" parent="Left Buttons/HBoxContainer/SprintButton"]
layout_mode = 2
text = "S"
label_settings = SubResource("LabelSettings_jqi1v")
horizontal_alignment = 1
vertical_alignment = 1

[node name="RollButton" parent="Left Buttons/HBoxContainer" instance=ExtResource("13_gw7b5")]
layout_mode = 2

[node name="RollLabel" type="Label" parent="Left Buttons/HBoxContainer/RollButton"]
layout_mode = 2
text = "R"
label_settings = SubResource("LabelSettings_jqi1v")
horizontal_alignment = 1
vertical_alignment = 1

[node name="StopButton" parent="Left Buttons/HBoxContainer" instance=ExtResource("13_gw7b5")]
layout_mode = 2

[node name="StopLabel" type="Label" parent="Left Buttons/HBoxContainer/StopButton"]
layout_mode = 2
text = "X"
label_settings = SubResource("LabelSettings_jqi1v")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="pressed" from="MarginContainer5/Exit" to="." method="_on_exit_pressed"]
[connection signal="encyclopedia_pressed" from="Game Toolbar" to="." method="_on_game_toolbar_encyclopedia_pressed"]
[connection signal="inventory_pressed" from="Game Toolbar" to="." method="_on_game_toolbar_inventory_pressed"]
[connection signal="journal_pressed" from="Game Toolbar" to="." method="_on_game_toolbar_journal_pressed"]
[connection signal="map_pressed" from="Game Toolbar" to="." method="_on_game_toolbar_map_pressed"]
[connection signal="pressed" from="MarginContainer4/Dev Mode" to="." method="_on_dev_mode_pressed"]
[connection signal="pressed" from="Left Buttons/HBoxContainer/SprintButton" to="." method="_on_sprint_button_pressed"]
[connection signal="released" from="Left Buttons/HBoxContainer/SprintButton" to="." method="_on_sprint_button_released"]
[connection signal="pressed" from="Left Buttons/HBoxContainer/RollButton" to="." method="_on_roll_button_pressed"]
